[package]
name = "process_macros"
authors = ["Sybil Technologies AG"]
version = "0.1.0"
edition = "2021"
description = "Macros to improve Rust Kinode process DevEx."
homepage = "https://kinode.org"
repository = "https://github.com/kinode-dao/process_macros"
license = "Apache-2.0"

[dependencies]
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
